--- a/testSite/hello_world/templates/hello_world/home.html
+++ b/testSite/hello_world/templates/hello_world/home.html
@@ -4,6 +4,6 @@
     <title>Moja Strona Hello World</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Elo elo 3.2.0!</h1>
 </body>
 </html>
